tests-integration/tests/roundtrip/native-errors/syntax-errors/unclosed-delimiter/unclosed-delimiter.expected-error.txt
Error: model.eprime:1:16:
  |
1 | find x: int(1..2
  |                 ^
Missing )


